--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,6 @@ jobs:
           $parts[-1] = [int]$parts[-1] + 1
           $newVersion = "$($parts -join '.')"
           Set-Content version.txt $newVersion
-          # write to GITHUB_OUTPUT so job outputs can read it
           echo "version=$newVersion" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8
           Write-Host "✅ Bumped version to $newVersion"
 
@@ -85,7 +84,6 @@ jobs:
           $installerPath = Join-Path $workspace "${{ env.INSTALLER_DIR }}\MessengerActive_Setup.exe"
 
           if (-not (Test-Path $installerPath)) {
-            # try to find generated exe in Output folder if name differs
             $found = Get-ChildItem -Path (Join-Path $workspace ${{ env.INSTALLER_DIR }}) -Filter "MessengerActive_Setup*.exe" -ErrorAction SilentlyContinue | Select-Object -First 1
             if ($found) { $installerPath = $found.FullName }
           }
@@ -97,12 +95,10 @@ jobs:
 
           $version = "${{ steps.version.outputs.version }}"
           $newInstallerName = "${{ env.INSTALLER_BASE_NAME }}_$version.exe"
-          $newInstallerPath = Join-Path (Join-Path $workspace ${{ env.INSTALLER_DIR }}) $newInstallerName
-
           Rename-Item -Path $installerPath -NewName $newInstallerName -Force
-          Write-Host "✅ Renamed installer to: $newInstallerPath"
+          Write-Host "✅ Renamed installer to: $newInstallerName"
 
-      - name: 🔏 Self-sign the installer (temporary .pfx, explicit /f usage)
+      - name: 🔏 Self-sign the installer (temporary .pfx)
         shell: pwsh
         run: |
           Write-Host "🔏 Creating temporary code signing certificate (.pfx) and signing installer..."
@@ -116,10 +112,10 @@ jobs:
           }
 
           $certPath = Join-Path $env:RUNNER_TEMP "temp_signing_cert.pfx"
-          $password = "password123"   # temporary; only for CI self-signing
+          $password = "password123"
           $publisher = "Rupesh Prabhu (MessengerActive)"
 
-          # Create a self-signed cert in CurrentUser store (exportable)
+          # Create self-signed certificate
           $cert = New-SelfSignedCertificate `
               -Subject "CN=$publisher" `
               -DnsName "MessengerActive.local" `
@@ -132,47 +128,33 @@ jobs:
 
           # Export PFX
           Export-PfxCertificate -Cert $cert -FilePath $certPath -Password (ConvertTo-SecureString -String $password -Force -AsPlainText)
-
           Write-Host "✅ Exported temporary PFX to $certPath"
 
-          # Find signtool dynamically (x64 preferred)
+          # Find signtool.exe dynamically
           $signtool = Get-ChildItem "C:\Program Files (x86)\Windows Kits" -Recurse -ErrorAction SilentlyContinue |
-              Where-Object { $_.Name -eq "signtool.exe" -and $_.FullName -match "x64" } |
-              Select-Object -First 1
-
+              Where-Object { $_.Name -eq "signtool.exe" -and $_.FullName -match "x64" } | Select-Object -First 1
           if (-not $signtool) {
-            # fallback to any signtool
             $signtool = Get-ChildItem "C:\Program Files (x86)\Windows Kits" -Recurse -ErrorAction SilentlyContinue |
                 Where-Object { $_.Name -eq "signtool.exe" } | Select-Object -First 1
           }
-
-          if (-not $signtool) {
-            Write-Error "❌ signtool.exe not found on this runner!"
-            exit 1
-          }
+          if (-not $signtool) { Write-Error "❌ signtool.exe not found"; exit 1 }
 
           Write-Host "✅ Found signtool at $($signtool.FullName)"
           $installerPath = $installer.FullName
-          Write-Host "🔏 Signing $installerPath ..."
 
-          # Use /f (pfx file) and /p (password) explicitly to avoid store lookup issues
+          # Sign installer
           & $signtool.FullName sign /f $certPath /p $password /fd SHA256 /tr http://timestamp.digicert.com /td SHA256 `
               /d "MessengerActive Installer" /du "https://github.com/rupeshprabhu/MessengerActive" $installerPath
 
           if ($LASTEXITCODE -ne 0) {
-            Write-Error "❌ signtool failed to sign the installer (exit code $LASTEXITCODE)!"
-            exit 1
+            Write-Error "❌ signtool failed (exit code $LASTEXITCODE)"; exit 1
           }
 
-          Write-Host "✅ Signed. Now verifying signature..."
-
-          # Verify signature using signtool verify (fail if not valid)
+          Write-Host "✅ Signed. Verifying..."
           & $signtool.FullName verify /pa /v $installerPath
           if ($LASTEXITCODE -ne 0) {
-            Write-Error "❌ Signature verification failed (exit code $LASTEXITCODE)!"
-            exit 1
+            Write-Error "❌ Signature verification failed"; exit 1
           }
-
           Write-Host "✅ Signature verified."
 
       - name: 📚 Archive source code
