--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,7 +89,7 @@ jobs:
           }
 
           if (-not (Test-Path $installerPath)) {
-            Write-Error "Installer not found after Inno Setup! Expected at $installerPath"
+            Write-Error "Installer not found after Inno Setup!"
             exit 1
           }
 
@@ -100,24 +100,19 @@ jobs:
           Rename-Item -Path $installerPath -NewName $newInstallerName -Force
           Write-Host "✅ Renamed installer to: $newInstallerPath"
 
-      - name: 🔏 Self-sign the installer (temporary .pfx, fixed)
+      - name: 🔏 Self-sign the installer (fixed)
         shell: pwsh
         run: |
-          Write-Host "🔏 Creating temporary code signing certificate (.pfx) and signing installer..."
           $workspace = $env:GITHUB_WORKSPACE
           $installerDir = Join-Path $workspace "${{ env.INSTALLER_DIR }}"
           $installer = Get-ChildItem -Path $installerDir -Filter "${{ env.INSTALLER_BASE_NAME }}_*.exe" | Select-Object -First 1
-
-          if (-not $installer) {
-            Write-Error "Installer not found for signing in $installerDir"
-            exit 1
-          }
+          if (-not $installer) { Write-Error "Installer not found"; exit 1 }
 
           $certPath = Join-Path $env:RUNNER_TEMP "temp_signing_cert.pfx"
           $password = "password123"
           $securePassword = ConvertTo-SecureString -String $password -Force -AsPlainText
 
-          # Create self-signed certificate with exportable private key
+          # Create exportable self-signed certificate
           $cert = New-SelfSignedCertificate `
               -Subject "CN=Rupesh Prabhu (MessengerActive)" `
               -DnsName "MessengerActive.local" `
@@ -128,36 +123,27 @@ jobs:
               -KeyAlgorithm RSA `
               -HashAlgorithm SHA256
 
-          # Export properly to PFX
-          Export-PfxCertificate -Cert $cert -FilePath $certPath -Password $securePassword
+          # Export with private key
+          Export-PfxCertificate -Cert $cert -FilePath $certPath -Password $securePassword -Force
           Write-Host "✅ Exported temporary PFX to $certPath"
 
-          # Locate signtool.exe
+          # Locate signtool
           $signtool = Get-ChildItem "C:\Program Files (x86)\Windows Kits" -Recurse -ErrorAction SilentlyContinue |
               Where-Object { $_.Name -eq "signtool.exe" -and $_.FullName -match "x64" } | Select-Object -First 1
           if (-not $signtool) {
             $signtool = Get-ChildItem "C:\Program Files (x86)\Windows Kits" -Recurse -ErrorAction SilentlyContinue |
                 Where-Object { $_.Name -eq "signtool.exe" } | Select-Object -First 1
           }
-          if (-not $signtool) { Write-Error "❌ signtool.exe not found"; exit 1 }
+          if (-not $signtool) { Write-Error "signtool.exe not found"; exit 1 }
 
-          Write-Host "✅ Found signtool at $($signtool.FullName)"
           $installerPath = $installer.FullName
-
-          # Sign using /f PFX and password
           & $signtool.FullName sign /f $certPath /p $password /fd SHA256 /tr http://timestamp.digicert.com /td SHA256 `
               /d "MessengerActive Installer" /du "https://github.com/rupeshprabhu/MessengerActive" $installerPath
 
-          if ($LASTEXITCODE -ne 0) {
-            Write-Error "❌ signtool failed (exit code $LASTEXITCODE)"; exit 1
-          }
-
-          Write-Host "✅ Signed. Verifying..."
+          if ($LASTEXITCODE -ne 0) { Write-Error "signtool failed"; exit 1 }
           & $signtool.FullName verify /pa /v $installerPath
-          if ($LASTEXITCODE -ne 0) {
-            Write-Error "❌ Signature verification failed"; exit 1
-          }
-          Write-Host "✅ Signature verified."
+          if ($LASTEXITCODE -ne 0) { Write-Error "Signature verification failed"; exit 1 }
+          Write-Host "✅ Signed and verified"
 
       - name: 📚 Archive source code
         run: |
