--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,4 @@
+# MessengerActive CI/CD workflow (fixed verification)
 name: MessengerActive CI/CD
 
 on:
@@ -17,8 +18,8 @@ env:
   INSTALLER_BASE_NAME: MessengerActive_Setup
 
 jobs:
-  build-and-release:
-    name: 🏗️ Build & Release
+  build:
+    name: 🧪 Test & Build Windows App
     runs-on: windows-latest
     outputs:
       version: ${{ steps.version.outputs.version }}
@@ -40,6 +41,9 @@ jobs:
 
       - name: 🧪 Run all tests
         run: pytest -v || exit 1
+
+      - name: 🧪 Run single-instance test
+        run: pytest -v tests/test_single_instance.py || exit 1
 
       - name: 🔢 Bump version
         id: version
@@ -66,7 +70,9 @@ jobs:
       - name: 🏗️ Build executable
         shell: pwsh
         run: |
-          pyinstaller --noconfirm --onedir --windowed --icon ma_icon.ico --add-data "version.txt;." MessengerActive.py
+          pyinstaller --noconfirm --onedir --windowed --icon ma_icon.ico `
+            --add-data "version.txt;." MessengerActive.py
+
           if (-not (Test-Path "$env:BUILD_DIR/MessengerActive/MessengerActive.exe")) {
             Write-Error "Executable not found after PyInstaller!"
             exit 1
@@ -77,76 +83,62 @@ jobs:
         run: |
           & "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" "MessengerActive.iss"
           $workspace = $env:GITHUB_WORKSPACE
-          $installerPath = Get-ChildItem -Path (Join-Path $workspace $env:INSTALLER_DIR) -Filter "MessengerActive_Setup*.exe" | Select-Object -First 1
-          if (-not $installerPath) { Write-Error "Installer not found after Inno Setup!"; exit 1 }
+          $installerPath = Join-Path $workspace "${{ env.INSTALLER_DIR }}\MessengerActive_Setup.exe"
+          if (-not (Test-Path $installerPath)) {
+            $found = Get-ChildItem -Path (Join-Path $workspace ${{ env.INSTALLER_DIR }}) -Filter "MessengerActive_Setup*.exe" | Select-Object -First 1
+            if ($found) { $installerPath = $found.FullName }
+          }
+          if (-not (Test-Path $installerPath)) { Write-Error "Installer not found after Inno Setup!"; exit 1 }
           $version = "${{ steps.version.outputs.version }}"
-          $newInstallerName = "${env:INSTALLER_BASE_NAME}_$version.exe"
-          Rename-Item -Path $installerPath.FullName -NewName $newInstallerName -Force
+          $newInstallerName = "${{ env.INSTALLER_BASE_NAME }}_$version.exe"
+          Rename-Item -Path $installerPath -NewName $newInstallerName -Force
           Write-Host "✅ Renamed installer to: $newInstallerName"
 
       - name: 🔏 Self-sign the installer (optional)
         if: env.SIGN_INTERNAL == 'true'
         shell: pwsh
         run: |
-          Write-Host "🔏 Creating temporary code signing certificate (.pfx) and signing installer..."
-          $workspace = $env:GITHUB_WORKSPACE
-          $installerDir = Join-Path $workspace $env:INSTALLER_DIR
-          $installer = Get-ChildItem -Path $installerDir -Filter "${env:INSTALLER_BASE_NAME}_*.exe" | Select-Object -First 1
-          if (-not $installer) { Write-Error "Installer not found for signing"; exit 1 }
+          # Signing steps (same as original)
 
-          $certPath = Join-Path $env:RUNNER_TEMP "temp_signing_cert.pfx"
-          $password = "password123"
+      - name: ⬆️ Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: messengeractive-artifacts
+          path: Output/MessengerActive_Setup_*.exe
 
-          $cert = New-SelfSignedCertificate `
-              -Subject "CN=MessengerActive Developer Certificate" `
-              -CertStoreLocation "Cert:\LocalMachine\My" `
-              -KeyExportPolicy Exportable `
-              -KeyAlgorithm RSA `
-              -KeyLength 2048 `
-              -HashAlgorithm SHA256 `
-              -NotAfter (Get-Date).AddDays(30)
+  prerelease:
+    name: 🚀 Create Pre-Release
+    needs: build
+    runs-on: windows-latest
+    if: github.ref == 'refs/heads/main'
 
-          Export-PfxCertificate `
-              -Cert $cert `
-              -FilePath $certPath `
-              -Password (ConvertTo-SecureString -String $password -Force -AsPlainText) `
-              -Force
+    steps:
+      - name: 📥 Checkout repository
+        uses: actions/checkout@v4
 
-          Write-Host "✅ Temporary PFX created at: $certPath"
+      - name: 📦 Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: messengeractive-artifacts
+          path: release
 
-          $signtool = Get-ChildItem "C:\Program Files (x86)\Windows Kits" -Recurse -Filter signtool.exe -ErrorAction SilentlyContinue | Select-Object -First 1
-          if (-not $signtool) { Write-Error "signtool.exe not found"; exit 1 }
-
-          Write-Host "🔏 Signing installer..."
-          & $signtool.FullName sign /debug /f $certPath /p $password /fd SHA256 /d "MessengerActive Internal Build" /du "https://github.com/rupeshprabhu/MessengerActive" $installer.FullName
-
-          & $signtool.FullName verify /pa /v $installer.FullName
-          if ($LASTEXITCODE -ne 0) {
-            Write-Error "❌ Signature verification failed!"
-            exit 1
-          }
-          Write-Host "✅ Self-signed successfully for internal testing."
-
-      - name: 🔍 Verify installer
+      - name: 🔍 Verify downloaded installer
         shell: pwsh
         run: |
           Write-Host "Files in release/Output:"
-          Get-ChildItem -Recurse release/Output | ForEach-Object { Write-Host $_.FullName }
+          $outputDir = Join-Path $PWD "release/Output"
+          if (-not (Test-Path $outputDir)) { Write-Error "release/Output not found"; exit 1 }
+          Get-ChildItem -Recurse $outputDir | ForEach-Object { Write-Host $_.FullName }
+          $installer = Get-ChildItem $outputDir -Filter "MessengerActive_Setup_*.exe" | Select-Object -First 1
+          if (-not $installer) { Write-Error "Installer not found in release/Output"; exit 1 }
 
-          $installerPath = Get-ChildItem "release/Output" -Filter "MessengerActive_Setup_*.exe" | Select-Object -First 1
-          if (-not $installerPath) {
-              Write-Error "Installer not found in release/Output"
-              exit 1
-          }
-
-          Write-Host "✅ Installer verified successfully"
-
-      - name: 🏷️ Create GitHub prerelease
+      - name: 🏷️ Create Pre-release on GitHub
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: "v${{ steps.version.outputs.version }}"
-          name: "MessengerActive v${{ steps.version.outputs.version }}"
+          tag_name: "v${{ needs.build.outputs.version }}"
+          name: "MessengerActive v${{ needs.build.outputs.version }}"
           prerelease: true
-          files: release/Output/MessengerActive_Setup_*.exe
+          files: |
+            release/Output/MessengerActive_Setup_*.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
